@startuml

title __QUIZZES's Class Diagram__\n

  package system.model {
    package system.model.classes {
      package system.model.classes.quizzes {
        class Quiz {
            - id : String
            - name : String
            - teacher : String
            - category : String
            - subcategory : String
            - subsubcategory : String
            - time : long
            ~ parts : LinkedList<QuizPart>
            + Quiz()
            + Quiz()
            + Quiz()
            + Quiz()
            + Quiz()
            + Quiz()
            + changeId()
            + getParts()
            + setParts()
            + getId()
            + setId()
            + getName()
            + setName()
            + getTeacher()
            + setTeacher()
            + getTime()
            + setTime()
            + getCategory()
            + setCategory()
            + getSubcategory()
            + setSubcategory()
            + getSubsubcategory()
            + setSubsubcategory()
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.quizzes {
        class QuizGroup {
            - id : String
            - teacher : String
            - father : String
            - grandfather : String
            - name : String
            + QuizGroup()
            + QuizGroup()
            + QuizGroup()
            + QuizGroup()
            + getId()
            + setId()
            + getTeacher()
            + setTeacher()
            + getFather()
            + setFather()
            + getGrandfather()
            + setGrandfather()
            + getName()
            + setName()
            + getType()
            + setType()
        }
      }
    }
  }
  

  package system.model {
    package system.model.classes {
      package system.model.classes.quizzes {
        class QuizPart {
            - id : String
            - name : String
            - quiz : String
            - order : int
            - number : int
            - category : String
            - subcategory : String
            - subsubcategory : String
            + QuizPart()
            + QuizPart()
            + QuizPart()
            + QuizPart()
            + changeId()
            + getCategory()
            + setCategory()
            + getNumber()
            + setNumber()
            + getId()
            + setId()
            + getName()
            + setName()
            + getQuiz()
            + setQuiz()
            + getOrder()
            + setOrder()
            + getSubcategory()
            + setSubcategory()
            + getSubsubcategory()
            + setSubsubcategory()
        }
      }
    }
  }
  

  Quiz -up-|> Serializable
  Quiz -up-|> Idable
  QuizGroup -up-|> Serializable
  QuizGroup -up-|> Idable
  QuizGroup o-- QuizGroupType : type
  QuizPart -up-|> Serializable
  QuizPart -up-|> Idable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
